--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-fastapi==0.115.0
+﻿fastapi==0.115.0
 uvicorn[standard]==0.30.6
-pydantic==2.9.2
-pydantic-settings==2.4.0
-sqlalchemy==2.0.34
+SQLAlchemy==2.0.34
 pandas==2.2.2
-numpy==2.1.1
-yfinance==0.2.43
-pandas-datareader==0.10.0
-requests==2.32.3
+numpy==2.0.2
+yfinance==0.2.44
+pandas_datareader==0.10.0
 python-dateutil==2.9.0.post0
