--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,28 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "skipLibCheck": true,
-    "jsx": "react-jsx",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "skipLibCheck": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+    "types": ["vite/client", "node"]
   },
-  "include": ["src/**/*"],
-  "exclude": [
-    "src/_backups/**/*",
-    "src/**/App_backup*.ts*",
-    "src/**/*_backup*.ts*",
-    "src/**/*backup*.ts*",
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*", "vite-env.d.ts"],
+  "exclude": ["src/_backups/**/*", "node_modules", "dist"]
 }
