Fix Pages workflow for frontend/

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -36,9 +36,10 @@ jobs:
         run: npm run build
         working-directory: frontend
         env:
-          # If you set a repo secret named VITE_API_BASE, leave this line.
-          # If you rely on frontend/.env.production instead, delete this env block.
+          # Use ONE of these two approaches:
+          # 1) If you added a secret:
           VITE_API_BASE: ${{ secrets.VITE_API_BASE }}
+          # 2) If you rely on frontend/.env.production, delete the line above.
 
       - name: SPA 404 fallback
         run: cp frontend/dist/index.html frontend/dist/404.html
