--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "rollup": "^4.24.0",
     "tailwindcss": "^3.4.18",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.45.0",
