--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -40,13 +40,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - name: Hit /status until healthy (max ~30s)
-        shell: bash
+      - name: Hit /peek until healthy (max ~30s)
         env:
-          API: "https://ssmif-api.ryanrawat.workers.dev"  # <-- use your real Worker URL
+          API: "https://ssmif-api.ryanrawat.workers.dev" # your real Worker URL
+        shell: bash
         run: |
           for i in {1..10}; do
-            CODE=$(curl -s -o /dev/null -w "%{http_code}" "$API/status")
+            CODE=$(curl -s -o /dev/null -w "%{http_code}" -X POST \
+              -H "content-type: application/json" \
+              -d '{}' "$API/peek")
             echo "Attempt $i -> $CODE"
             if [ "$CODE" = "200" ]; then
               echo "Worker healthy at $API"
@@ -56,5 +58,5 @@ jobs:
           done
           echo "Worker did not become healthy in time"
           echo "----- Last response -----"
-          curl -i "$API/status" || true
+          curl -i -X POST -H "content-type: application/json" -d '{}' "$API/peek" || true
           exit 1
